--- a/src/core/css/theme.scss
+++ b/src/core/css/theme.scss
@@ -108,7 +108,7 @@
   --color-gray-80: #3d3d3d;
   --color-gray-85: #242424;
   --color-gray-90: #1e1e1e;
-  --color-gray-100: #000000;
+  --color-gray-100: #121212;
 
   --color-disabled: var(--color-gray-40);
 
@@ -193,8 +193,8 @@
     --dropdown-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="292.4" height="292.4" viewBox="0 0 292 292"><path fill="%23ced4da" d="M287 197L159 69c-4-3-8-5-13-5s-9 2-13 5L5 197c-3 4-5 8-5 13s2 9 5 13c4 4 8 5 13 5h256c5 0 9-1 13-5s5-8 5-13-1-9-5-13z"/></svg>');
     --focus-highlight-color: #{$oc-blue-6};
     --icon-green-fill-color: #{$oc-green-4};
-    --default-bg-color: #000000;
-    --input-bg-color: #000000;
+    --default-bg-color: #121212;
+    --input-bg-color: #121212;
     --input-border-color: #2e2e2e;
     --input-hover-bg-color: #181818;
     --input-label-color: #{$oc-gray-2};
